--- a/EmployeeManagement/Views/EmployeeDetail/EditEmployee.cshtml
+++ b/EmployeeManagement/Views/EmployeeDetail/EditEmployee.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditEmployee">
+        <form asp-action="EditEmployee" FormMethod.Post, enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
@@ -29,9 +29,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProfilePicture" class="control-label"></label>
+                <input type="file" name="ImageFile" required class="form-control" />
                 <input asp-for="ProfilePicture" class="form-control" />
                 <span asp-validation-for="ProfilePicture" class="text-danger"></span>
             </div>
+           
             <div class="form-group">
                 <label asp-for="Salary" class="control-label"></label>
                 <input asp-for="Salary" class="form-control" />
