--- a/EmployeeManagement/Views/EmployeeDetail/Index.cshtml
+++ b/EmployeeManagement/Views/EmployeeDetail/Index.cshtml
@@ -1,5 +1,12 @@
 ﻿@model IEnumerable<CommonModels.ViewModel.EmployeeDetailViewModel>
-
+@if (TempData["success"] != null)
+{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script type="text/javascript">
+        toastr.success('@TempData["success"]');
+    </script>
+}
 @{
     ViewData["Title"] = "Index";
 }
@@ -52,9 +59,9 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.DesignationId)
                     </td>
-                    <td>
-                        <img decoding="async" src="@("~/Images/"+item.ProfilePicture)" height="50" width="50" />
-                    </td>
+                     <td>
+                        <img src="~/Images/@item.ProfilePicture" height="50" width="50" />
+                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Salary)
                     </td>
