--- a/EmployeeManagement/Views/EmployeeDetail/Registration.cshtml
+++ b/EmployeeManagement/Views/EmployeeDetail/Registration.cshtml
@@ -170,9 +170,9 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group">
+           @* <div class="form-group">
                 <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-            </div>
+            </div>*@
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-lg">Register</button>
             </div>
