--- a/EmployeeManagement/Views/Shared/_notification.cshtml
+++ b/EmployeeManagement/Views/Shared/_notification.cshtml
@@ -1,8 +1,7 @@
-﻿
-@if(TempData["success"] !=null)
+﻿@if (TempData["success"] != null)
 {
-    <script src="~/lib/jquery/dist/jquery.js/jquery.min.js"></script>
-    <script src="cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script type="text/javascript">
         toastr.success('@TempData["success"]');
     </script>
