--- a/EmployeeManagement/Views/EmployeeDetail/Index.cshtml
+++ b/EmployeeManagement/Views/EmployeeDetail/Index.cshtml
@@ -10,7 +10,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>Index</h1>
+<h1>EmployeeManagement WebApplication</h1>
 <p>
     <a asp-action="AddEmployee">Create New</a>
 </p>
@@ -24,7 +24,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DesignationId)
+                @Html.DisplayNameFor(model => model.Designation)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProfilePicture)
@@ -57,7 +57,7 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.DesignationId)
+                        @Html.DisplayFor(modelItem => item.Designation)
                     </td>
                      <td>
                         <img src="~/Images/@item.ProfilePicture" height="50" width="50" />
@@ -75,8 +75,9 @@
                         @Html.DisplayFor(modelItem => item.Address)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "EditEmployee", new {  id=item.Id }) |
-                        <input type="submit" value="Delete" onclick="return confirm('Are you sure to delete ')" />
+                        @*@Html.ActionLink("Edit", "EditEmployee", new {  id=item.Id }) |*@
+                        <button type="button" onclick="location.href='@Url.Action("EditEmployee", new { id = item.Id })'" class="btn btn-primary">Edit</button>
+                        <input type="submit" class="btn btn-danger" value="Delete" onclick="return confirm('Are you sure to delete ')" />
                     </td>
                 </tr>
             }
